--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=user-service
+spring.application.name=auth-service
+server.port = 8081
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/sprint_userdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Properties
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+logging.level.org.springframework.security=DEBUG
+
+
